@@ -140,6 +140,10 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
+                    <options>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/javafx.scene=ALL-UNNAMED</option>
+                    </options>
                     <mainClass>de.flapdoodle.tab.Tab</mainClass>
                 </configuration>
             </plugin>
